fix(elevation): legacy z-index [DS-2761] (#384)

--- a/module/elevation/mixin/_drop.scss
+++ b/module/elevation/mixin/_drop.scss
@@ -1,5 +1,17 @@
-@mixin drop() {
-  z-index: auto;
-  filter: none;
-  background: transparent;
+@use 'sass:map';
+@use 'module/legacy';
+
+@mixin drop($options: ()) {
+  $legacy: map.get($options, legacy);
+  @if $legacy {
+    @include legacy.is(ie11) {
+      z-index: auto;
+      background: transparent;
+    }
+  }
+  @else {
+    z-index: auto;
+    background: transparent;
+    filter: none;
+  }
 }
