--- a/src/component/header/style/_legacy.scss
+++ b/src/component/header/style/_legacy.scss
@@ -37,13 +37,9 @@
         overflow: visible;
       }
     }
-  }
-}
 
-@include respond-from(lg) {
-  @include legacy.is(ie11) {
-    #{ns(header)} {
-      #{ns(modal)} {
+    #{ns(modal)} {
+      @include respond-from(lg) {
         position: static;
         overflow: visible;
       }
