--- a/src/component/sidemenu/style/module/_action.scss
+++ b/src/component/sidemenu/style/module/_action.scss
@@ -3,8 +3,6 @@
 /// @group sidemenu
 ////
 
-@use 'module/color';
-
 /**
  * Styles du bouton et du lien d'accès direct du sidemnu
  */
@@ -16,7 +14,6 @@
   @include padding(3v 2v);
   @include margin(0, md);
   @include text-style(md);
-  @include color.no-box-shadow;
   text-align: left;
   font-weight: font-weight(bold);
 
@@ -57,7 +54,6 @@
   }
 
   &[aria-expanded="true"] {
-    @include color.no-box-shadow;
     @include after {
       transform: rotate(-180deg);
     }
